fix 6 and 7 lessons